# lns

./: .gitignore  AGENTS.md  README.md  lns-design-v1.html  lns-design-v2.html  lns-design-v3.html
LNS/: .dockerignore  AGENTS.md  Dockerfile  MEMORY.md  UI-Page-Spec.md  config.py  docker-compose.test.yml  main.py  orchestrator.py  pyproject.toml  requirements.txt  server.py  setup.py
LNS.modified/: orchestrator.py  pyproject.toml  server.py
LNS.modified/db/data/: lns.db-shm  lns.db-wal
LNS.modified/engine/: __init__.py
LNS.modified/engine/bazi/: engine.py
LNS.modified/engine/calendar/: __init__.py  engine.py
LNS.modified/engine/knowledge_graph/: __init__.py
LNS.modified/engine/prompt/: engine.py
LNS.modified/engine/state/: engine.py
LNS.modified/engine/state_synthesizer/: __init__.py  engine.py
LNS.modified/engine/time/: engine.py
LNS.modified/knowledge/health/: health.json
LNS.modified/knowledge/relations/: relations.json
LNS.modified/knowledge/shensha/: shensha.json
LNS.modified/models/: constants.py  core.py
LNS.modified/static/: analysis.html  create.html  dashboard_static.html  home.html  index.html  kline.html  mockup.html  ui-shell.css  ui-shell.js  year-detail.html
LNS.modified/tests/golden_dataset/: historical_figures.json
开发文档/: 00-README.md  00A-ADR.md  01-Developer-Constitution.md  02-Product-Specification.md  03-System-Architecture.md  04-Calendar-Engine.md  05-BaZi-Engine.md  06-State-Engine.md  07-Knowledge-Graph.md  07A-State-Synthesizer.md  08-Time-Engine.md  09-Decision-Engine.md  10-Prompt-Engine.md  11-API-Design.md  (+16 more)
(+51 files in other folders)
